src/objects/click_Bank_Statement_Data__c.object
<CustomObject>
    <fields>
        <fullName>Bank_Statement_Account_Number__c</fullName>
        <label>Bank Statement Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Click_Required_Document_Id__c</fullName>
        <label>Required Document Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Click_Statement_No__c</fullName>
        <label>Category Index No.</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Click_TransactionCount__c</fullName>
        <label>Transaction Count</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Click_UniqueId__c</fullName>
        <formula>TRIM(Click_Required_Document_Id__c + Bank_Statement_Account_Number__c + Click_Statement_No__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UniqueId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>click_Bank_Statements_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Statements Account</label>
        <referenceTo>click_Bank_Statements_Account__c</referenceTo>
        <relationshipName>Bank_Statement_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>click_monthAvg__c</fullName>
        <label>Month Avg</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>click_totalValue__c</fullName>
        <label>Total Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>closingBalance__c</fullName>
        <label>Closing Balance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dayEndBalances__c</fullName>
        <label>Day End Balances</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>daysInNegative__c</fullName>
        <label>Days In Negative</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>endDate__c</fullName>
        <label>End Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>errorMessage__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maxBalance__c</fullName>
        <label>Max Balance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>minBalance__c</fullName>
        <label>Min Balance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>minDayEndBalance__c</fullName>
        <label>Min Day End Balance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>openingBalance__c</fullName>
        <label>Opening Balance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>startDate__c</fullName>
        <label>Start Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>totalCredits__c</fullName>
        <label>Total Credits</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>totalDebits__c</fullName>
        <label>Total Debits</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Bank Statement Category</label>
    <nameField>
        <label>Bank Statement Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Statement Category</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>